Changes since 0.6.0:
* Catchpoints:
	* The default was to halt at every type of StandardError, the new default is *not* to halt when exceptions are raised
	* There is a menu entry in the debug perspective and a toolbar button in the breakpoint view which starts the Catchpoint dialog
	* The catchpoint dialog allows to add a ruby exception breakpoint
	* There can be at most one exception breakpoint; the breakpoint can be enabled, disabled and removed in the breakpoint view

Changes merged from SRB 0.6.1:
* SRB_0-6-1_1: Enable/Disable breakpoints, move breakpoints 
* SRB_0-6-1_2: Highlighting: added here docs, fixed ?#, fixed =begin =end with keywords not starting on first column
* SRB_0-6-1_3: Fixed Test::Unit problems with finding a free port
               Fixed interpreter error for Test::Unit configuration created from the run configuration dialog with new 
               (instead of Run As->Test::Unit which uses the Shortcut)

Release 0.6.0:
* Code folding:
    * Ability to enable/disable
    * Preference page allows you to choose to auto-collapse
        * Inner types
        * Methods
        * RDoc (not really working yet)
* Much more intelligent parsing
    *  Annotations and highlights of syntax errors
    *  Annotations and highlights of warnings created by JRuby parser
* Auto-complete of brackets, parens, and single/double quotes
* Task tag recognition
    * Ability to set multiple tags
    * Ability to set low, normal or high priorities for tags
    * Early versions from Head (no official releases) would install a TODO marker that
      would not be removed. This bug was fixed, but if you've got "stuck Tasks" that 
      don't match actual task tags in your source file, there are two ways to remove them.
      1) open the file in the text editor (right-click on the file in Resource Navigator, and 
      select Open With - Text Editor).  You can then right click on the task tag in the left margin
      and select Remove Task